--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Hang Man Game</title>
 </head>
+
 <body>
-    
+    <section>
+        <div class="book">
+            <div class="pattern">
+                <br>
+                <div class="label">
+                    <h1>COMPOSITION BOOK</h1>
+                    <h2 class="underline">Hangman Game</h2>
+
+                    <p class="underline left">programed by:</p>
+
+                    <p class="underline right bold">Luis Suarez</p>
+
+                    <h3 class="underline">April - 2018</h3>
+
+                    <a href="hangman.html"> <p class="button">Play Now!</p></a>
+                    <br>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
