added game engine

--- a/hangman.html
+++ b/hangman.html
@@ -13,13 +13,22 @@
 <body>
     <div class="desk">
         <div class="paper">
-             <br>   
-            <div class="tittle"><h1>Hang Man</h1></div>
-            
-            <div class="panel"><h4>Won:</h4><h4>Lost:</h4><h4>Games:</h4></div>
-            <div class="picture"><img src="assets/images/1.png" alt="Hangman"></div>
+            <br>
+            <div class="tittle">
+                <h1>Hang Man</h1>
+            </div>
+
+            <div class="panel">
+                <h4>Won: <span class="won">0</span> </h4>
+                <h4>Lost: <span class="lost">0</span> </h4>
+                <h4>Games: <span class="games">0</span>  </h4>
+            </div>
+            <div class="picture">
+                <img src="assets/images/1.png" alt="Hangman">
+            </div>
         </div>
     </div>
+    <script src="assets/javascript/game.js"></script>
 </body>
 
 </html>
