updated to modify HTML from JS

--- a/hangman.html
+++ b/hangman.html
@@ -19,12 +19,14 @@
             </div>
 
             <div class="panel">
-                <h4>Won: <span class="won">0</span> </h4>
-                <h4>Lost: <span class="lost">0</span> </h4>
-                <h4>Games: <span class="games">0</span>  </h4>
+                <h4>Won: <span id="won">0</span> </h4>
+                <h4>Lost: <span id="lost">0</span> </h4>
+                <h4>Games: <span id="games">0</span>  </h4>
+                <h4>Guesses Remaing: <span id="remaining">7</span>  </h4>
             </div>
-            <div class="picture">
-                <img src="assets/images/1.png" alt="Hangman">
+            <div class="guessingBlock"> <h3 id="list"></h3><h3>Guess:<span id="guess"></span></h3></div>
+            <div >
+                <img src="assets/images/7.png" alt="Hangman" id="picture" >
             </div>
         </div>
     </div>
