--- a/hangman.html
+++ b/hangman.html
@@ -25,7 +25,7 @@
                 <h4>Guesses Remaing: <span id="remaining">7</span>  </h4>
             </div>
             <div class="guessingBlock"> <h3 id="list"></h3><h3>Guess:<span id="guess"></span></h3></div>
-            <div >
+            <div class="picContainer">
                 <img src="assets/images/7.png" alt="Hangman" id="picture" >
             </div>
         </div>
