--- a/hangman.html
+++ b/hangman.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>Hangman Game</title>
 </head>
 
 <body>
@@ -19,15 +19,15 @@
             </div>
 
             <div class="panel">
-                <h4>Won: <span id="won">0</span> </h4>
-                <h4>Lost: <span id="lost">0</span> </h4>
-                <h4>Games: <span id="games">0</span>  </h4>
-                <h4>Guesses Remaing: <span id="remaining">7</span>  </h4>
+                <h4 class="button">Won: <span id="won">0</span> 
+                |  Lost: <span id="lost">0</span> 
+                |  Games: <span id="games">0</span>  
+                |  Guesses Remaing: <span id="remaining">7</span>  </h4>
             </div>
             <div class="guessingBlock"> <h3 id="list"></h3><h3>Guess:<span id="guess"></span></h3></div>
-            <div class="picContainer">
+            
                 <img src="assets/images/7.png" alt="Hangman" id="picture" >
-            </div>
+            
         </div>
     </div>
     <script src="assets/javascript/game.js"></script>
