--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <h1>COMPOSITION BOOK</h1>
                     <h2 class="underline">Hangman Game</h2>
 
-                    <p class="underline left">programed by:</p>
+                    <p class="underline left">programmed by:</p>
 
                     <p class="underline right bold">Luis Suarez</p>
 
