--- a/hangman.html
+++ b/hangman.html
@@ -13,6 +13,7 @@
 
 <body>
     <div class="desk">
+        <a href="" id="keyboard">K</a>
         <div class="paper">
             <br>
             <div class="tittle">
