--- a/hangman.html
+++ b/hangman.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="desk">
-        <a href="" id="keyboard">K</a>
+        <input type="text">
         <div class="paper">
             <br>
             <div class="tittle">
