--- a/hangman.html
+++ b/hangman.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="desk">
-        <input type="text">
+        <p class="keyboard">Open</p>
         <div class="paper">
             <br>
             <div class="tittle">
