--- a/hangman.html
+++ b/hangman.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="desk">
-        <p class="keyboard">Open</p>
+        <p class="keyboard">Open K</p>
         <div class="paper">
             <br>
             <div class="tittle">
