--- a/hangman.html
+++ b/hangman.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="user-scalable = no>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/reset.css">
@@ -13,7 +13,7 @@
 
 <body>
     <div class="desk">
-        <p class="keyboard">Open K</p>
+        
         <div class="paper">
             <br>
             <div class="tittle">
