--- a/hangman.html
+++ b/hangman.html
@@ -9,10 +9,12 @@
     <link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    
     <title>Hangman Game</title>
 </head>
 
 <body>
+    <audio id="chill" controls autoplay ><source src="assets/audio/ask.mp3" type="audio/mpeg"></audio>
     <div class="desk">
         
         <div class="paper">
