--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="user-scalable = no>
+    <meta name="viewport" content="user-scalable = no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/png" href="favicon.ico" />
     <link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
