trying to open soft keyboard

--- a/hangman.html
+++ b/hangman.html
@@ -13,7 +13,7 @@
     <title>Hangman Game</title>
 </head>
 
-<body>
+<body id="open">
     <audio id="chill" controls autoplay ><source src="assets/audio/ask.mp3" type="audio/mpeg"></audio>
     <div class="desk">
         
